--- a/frontend/src/scss/_datepicker.scss
+++ b/frontend/src/scss/_datepicker.scss
@@ -8,24 +8,24 @@
 
     .month-year-picker-control {
       height: 10.1rem;
-      border: .05rem solid $gray-color;
+      border: 0.05rem solid $gray-color;
       border-right: 0;
       width: 4rem;
       z-index: 100;
       background-color: $light-color;
-      padding: .5rem .3rem;
+      padding: 0.5rem 0.3rem;
       position: absolute;
       left: 0;
       top: 2.1rem;
 
       span {
-        font-size: .65rem;
+        font-size: 0.65rem;
         background-color: $gray-color-lightest;
         border: 1px solid $gray-color-lightest;
-        border-radius: .2rem;
+        border-radius: 0.2rem;
         color: $primary-color;
-        padding: .15rem .6rem;
-        margin-bottom: .4rem;
+        padding: 0.15rem 0.6rem;
+        margin-bottom: 0.4rem;
         display: inline-block;
         cursor: pointer;
 
@@ -39,7 +39,7 @@
     }
 
     .vdp-datepicker__calendar {
-      margin-top: .1rem;
+      margin-top: 0.1rem;
       margin-left: 4rem;
       display: block !important;
     }
@@ -50,11 +50,11 @@
   }
 
   .month-year-picker-result {
-    border: .05rem solid $gray-color;
-    background: $light-color url('../assets/ico-calendar.svg') calc(100% - .4rem) center/0.8rem 0.8rem no-repeat;
+    border: 0.05rem solid $gray-color;
+    background: $light-color url('../assets/ico-calendar.svg') calc(100% - 0.4rem) center/0.8rem 0.8rem no-repeat;
     border-radius: 0.15rem;
     padding: 0.425rem 0.4rem;
-    margin-right: .5rem;
+    margin-right: 0.5rem;
   }
 }
 
@@ -88,11 +88,13 @@
   &.vdp-datepicker__calendar .cell:not(.blank):not(.disabled).year:hover {
     border: 0;
     color: $primary-color;
+
     &.selected {
       border: 0;
       color: $primary-color;
     }
   }
+
   &.vdp-datepicker__calendar .cell.selected,
   &.vdp-datepicker__calendar .cell.selected.highlighted,
   &.vdp-datepicker__calendar .cell.selected:hover {
