--- a/frontend/src/scss/_labels.scss
+++ b/frontend/src/scss/_labels.scss
@@ -1,10 +1,10 @@
 .label {
-  padding: .4rem;
+  padding: 0.4rem;
 
   &.label-rounded {
     border-radius: 5rem;
-    padding-left: .4rem;
-    padding-right: .4rem;
+    padding-left: 0.4rem;
+    padding-right: 0.4rem;
   }
 
   &.label-primary {
