--- a/frontend/src/scss/_navs.scss
+++ b/frontend/src/scss/_navs.scss
@@ -6,14 +6,14 @@
 }
 
 .nav {
-  padding: 0 .4rem;
+  padding: 0 0.4rem;
 
   .nav-item {
-    padding: .4rem;
+    padding: 0.4rem;
     border-radius: $border-radius;
 
     svg {
-      margin-right: .2rem;
+      margin-right: 0.2rem;
     }
 
     &:hover,
