--- a/frontend/src/scss/_tables.scss
+++ b/frontend/src/scss/_tables.scss
@@ -1,6 +1,6 @@
 // Tables
 .table {
-  font-size: .7rem;
+  font-size: 0.7rem;
   border-radius: $border-radius;
 
   .w-cell-user {
@@ -76,7 +76,7 @@
   }
 
   .btn {
-    font-size: .7rem;
+    font-size: 0.7rem;
   }
 
   &.sortable-table {
