--- a/frontend/src/scss/_typography.scss
+++ b/frontend/src/scss/_typography.scss
@@ -3,27 +3,32 @@ h1,
   font-size: 1.2rem;
   line-height: 1.35;
 }
+
 h2,
 .h2 {
   font-size: 1rem;
   line-height: 1.35;
 }
+
 h3,
 .h3 {
-  font-size: .9rem;
+  font-size: 0.9rem;
   line-height: 1.2;
 }
+
 h4,
 .h4 {
-  font-size: .8rem;
+  font-size: 0.8rem;
   line-height: 1.5;
 }
+
 h5,
 .h5 {
-  font-size: .7rem;
+  font-size: 0.7rem;
   line-height: 1.2;
 }
+
 h6,
 .h6 {
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
