--- a/frontend/src/scss/_base.scss
+++ b/frontend/src/scss/_base.scss
@@ -20,26 +20,28 @@ body {
 
 .main {
   background: $gray-color-lightest;
-  padding: .8rem 2rem 0;
+  padding: 0.8rem 2rem 0;
   margin-left: 10rem;
   width: 100%;
   min-height: 100vh;
 }
 
 svg {
-  width: .8rem;
-  height: .8rem;
+  width: 0.8rem;
+  height: 0.8rem;
   color: $gray-color;
   vertical-align: text-bottom;
 }
 
 .footer {
   margin-top: 1rem;
-  font-size: .6rem;
+  font-size: 0.6rem;
   padding: 1.5rem 0;
+
   a {
     color: $dark-color;
   }
+
   .footer-items {
     display: flex;
     align-items: center;
