--- a/frontend/src/scss/_calendars.scss
+++ b/frontend/src/scss/_calendars.scss
@@ -6,7 +6,7 @@
   }
 
   .calendar-nav {
-    padding: .8rem;
+    padding: 0.8rem;
     background-color: $light-color;
     display: flex;
     justify-content: space-between;
