--- a/frontend/src/scss/_navbar.scss
+++ b/frontend/src/scss/_navbar.scss
@@ -4,10 +4,11 @@
 
 .navbar {
   height: auto;
-  padding: .4rem 0;
+  padding: 0.4rem 0;
 
   .navbar-brand {
     line-height: 1;
+
     img {
       height: 1.6rem;
       vertical-align: middle;
@@ -15,14 +16,14 @@
   }
 
   .dropdown {
-    padding: .4rem 0;
+    padding: 0.4rem 0;
 
     .dropdown-toggle {
       svg {
         color: $dark-color;
-        height: .6rem;
-        width: .6rem;
-        transition: color .1s ease-in-out;
+        height: 0.6rem;
+        width: 0.6rem;
+        transition: color 0.1s ease-in-out;
       }
 
       &:hover {
@@ -45,6 +46,7 @@
 
   .notification {
     cursor: pointer;
+
     svg {
       color: $dark-color;
       width: 1rem;
@@ -53,14 +55,14 @@
 
     &.badge[data-badge]::after {
       width: auto;
-      height: .8rem;
-      font-size: .6rem;
+      height: 0.8rem;
+      font-size: 0.6rem;
       top: 0;
-      right: .2rem;
+      right: 0.2rem;
       position: absolute;
       background-color: $error-color;
       box-shadow: none;
-      transform: translate(.7rem, -.3rem);
+      transform: translate(0.7rem, -0.3rem);
     }
   }
 
@@ -68,7 +70,7 @@
     color: $dark-color;
     text-decoration: none;
     cursor: pointer;
-    transition: color .1s ease-in-out;
+    transition: color 0.1s ease-in-out;
 
     &:focus,
     &.active,
@@ -79,6 +81,7 @@
 
   .menu .menu-item > a {
     font-size: $font-size-sm;
+
     &:focus,
     &:hover,
     &:active,
@@ -90,24 +93,24 @@
 
 .lang-select {
   .header {
-    border-bottom: .05rem solid $border-color;
-    margin-bottom: .4rem;
+    border-bottom: 0.05rem solid $border-color;
+    margin-bottom: 0.4rem;
     position: relative;
 
     p {
-      font-size: .6rem;
+      font-size: 0.6rem;
       font-weight: bold;
       line-height: 1;
       margin: 0;
-      padding-bottom: .5rem;
+      padding-bottom: 0.5rem;
       text-align: center;
     }
 
     .btn-back {
       color: $dark-color;
-      left: .8rem;
+      left: 0.8rem;
       position: absolute;
-      top: -.15rem;
+      top: -0.15rem;
 
       &:hover {
         color: $primary-color;
@@ -124,8 +127,8 @@
     padding-right: 0;
 
     .menu-item {
-      padding-right: .8rem;
-      padding-left: .8rem;
+      padding-right: 0.8rem;
+      padding-left: 0.8rem;
     }
   }
 }
