--- a/frontend/src/scss/_setting.scss
+++ b/frontend/src/scss/_setting.scss
@@ -1,5 +1,5 @@
 .setting-sidebar {
-  @include shadow-variant(.05rem);
+  @include shadow-variant(0.05rem);
 
   margin: 0;
   list-style: none;
@@ -10,14 +10,14 @@
     margin-top: 0;
 
     &:not(:first-child) {
-      border-top: .05rem solid $border-color;
+      border-top: 0.05rem solid $border-color;
     }
   }
 
   a {
     display: flex;
     align-items: center;
-    padding: .4rem .8rem;
+    padding: 0.4rem 0.8rem;
     color: $gray-color;
     text-decoration: none;
 
@@ -32,11 +32,11 @@
     }
 
     &.active {
-      border-right: .2rem solid $primary-color;
+      border-right: 0.2rem solid $primary-color;
     }
 
     svg {
-      margin-right: .8rem;
+      margin-right: 0.8rem;
       height: 1.2rem;
       width: 1.2rem;
     }
