--- a/frontend/src/scss/_title.scss
+++ b/frontend/src/scss/_title.scss
@@ -6,5 +6,5 @@
 .subtitle {
   font-size: 1rem;
   border-bottom: 1px solid $border-color-dark;
-  padding-bottom: .3rem;
+  padding-bottom: 0.3rem;
 }
