--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -45,21 +45,21 @@ $link-color-dark: darken($link-color, 5%);
 
 // Fonts
 // Credit: https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/
-$base-font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto;
-$mono-font-family: "SF Mono", "Segoe UI Mono", "Roboto Mono", Menlo, Courier, monospace;
-$fallback-font-family: "Helvetica Neue", sans-serif;
-$cjk-zh-font-family: $base-font-family, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", $fallback-font-family;
-$cjk-jp-font-family: $base-font-family, "Hiragino Sans", "Hiragino Kaku Gothic Pro", "Yu Gothic", YuGothic, Meiryo, $fallback-font-family;
-$cjk-ko-font-family: $base-font-family, "Malgun Gothic", $fallback-font-family;
+$base-font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto;
+$mono-font-family: 'SF Mono', 'Segoe UI Mono', 'Roboto Mono', Menlo, Courier, monospace;
+$fallback-font-family: 'Helvetica Neue', sans-serif;
+$cjk-zh-font-family: $base-font-family, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', $fallback-font-family;
+$cjk-jp-font-family: $base-font-family, 'Hiragino Sans', 'Hiragino Kaku Gothic Pro', 'Yu Gothic', YuGothic, Meiryo, $fallback-font-family;
+$cjk-ko-font-family: $base-font-family, 'Malgun Gothic', $fallback-font-family;
 $body-font-family: $base-font-family, $fallback-font-family;
 
 // Unit sizes
-$unit-o: .05rem;
-$unit-h: .15rem;
-$unit-1: .2rem;
-$unit-2: .4rem;
-$unit-3: .6rem;
-$unit-4: .8rem;
+$unit-o: 0.05rem;
+$unit-h: 0.15rem;
+$unit-1: 0.2rem;
+$unit-2: 0.4rem;
+$unit-3: 0.6rem;
+$unit-4: 0.8rem;
 $unit-5: 1rem;
 $unit-6: 1.2rem;
 $unit-7: 1.4rem;
@@ -72,10 +72,10 @@ $unit-16: 3.2rem;
 // Font sizes
 $html-font-size: 20px;
 $html-line-height: 1.5;
-$font-size: .7rem;
-$font-size-xs: .5rem;
-$font-size-sm: .6rem;
-$font-size-lg: .8rem;
+$font-size: 0.7rem;
+$font-size-xs: 0.5rem;
+$font-size-sm: 0.6rem;
+$font-size-lg: 0.8rem;
 $line-height: 1rem;
 
 // Sizes
@@ -89,12 +89,12 @@ $control-size: $unit-9;
 $control-size-sm: $unit-7;
 $control-size-lg: $unit-10;
 $control-padding-x: $unit-2;
-$control-padding-x-sm: $unit-2 * .75;
+$control-padding-x-sm: $unit-2 * 0.75;
 $control-padding-x-lg: $unit-2 * 1.5;
 $control-padding-y: ($control-size - $line-height) / 2 - $border-width;
 $control-padding-y-sm: ($control-size-sm - $line-height) / 2 - $border-width;
 $control-padding-y-lg: ($control-size-lg - $line-height) / 2 - $border-width;
-$control-icon-size: .8rem;
+$control-icon-size: 0.8rem;
 
 $control-width-xs: 180px;
 $control-width-sm: 320px;
