--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -20,8 +20,8 @@
       <div class="hero-content">
         <div class="hero-introduction">
           <div class="hero-introduction-text">
-            <h1 class="hero-title">Difficult to manage employee attendance ?</h1>
-            <p>Our Punch is here to help making it as easy as ever with our managing solution.</p>
+            <h1 class="hero-title">Difficult to manage employees attendance ?</h1>
+            <p>We are here to help you getting through your problem as easy as ever, no more blank timesheet, no more inaccurate work time report and your work efficiency will increase significantly with Punch.</p>
             <%= link_to 'Get Started', get_started_url, class: 'btn btn-get-started navbar-link' %>
           </div>
         </div>
@@ -87,9 +87,9 @@
             <div class="card-image">
               <img data-src="<%= asset_url('img_feature_01.png') %>" alt="Many ways to track" width="100">
             </div>
-            <h3 class="card-header">Many ways to track</h3>
+            <h3 class="card-header">Easy to track</h3>
             <div class="card-body">
-              With Punch you can easily check In and out using our web portal and mobile devices.All data is saved and synchronized cross devices so feel free to try the most suitable device for you.
+              Punch support wide range of devices, browsers so you can use whatever you feel most comfortable to log down your work time, check your current attendance status, or just simply request a day off.
             </div>
             <div class="card-footer">
               <a href="#">Learn more</a>
@@ -101,7 +101,7 @@
             </div>
             <h3 class="card-header">Comprehensive reports</h3>
             <div class="card-body">
-              Just a click of mouse and you will have a comprehensive report about employee attendance performance.You can export to CSV file for many other kinds of purpose.
+              With just a click, Punch will generate a comprehensive report about you or your employees attendance status. You can export to CSV file for many other kinds of purpose.
             </div>
             <div class="card-footer">
               <a href="#">Learn more</a>
@@ -115,7 +115,7 @@
             </div>
             <h3 class="card-header">Data on Cloud</h3>
             <div class="card-body">
-              This allows you to access data anytime anywhere on app and web browser. All data is saved so you can have a review whenever you want for improving attendance improving.
+              Punch use cloud technology to backup and syncronize your attendance data across devices, so you dont have to worry about accidentally losing your devices, or limitation on number of device to login of some other solution.
             </div>
             <div class="card-footer">
               <a href="#">Learn more</a>
@@ -127,7 +127,7 @@
             </div>
             <h3 class="card-header">No time-comsuming, paper-wasting, just profit.</h3>
             <div class="card-body">
-              How many times and papers, you spent filling up a form just to ask for a day off, or correct your attendance time and send to your manager! Our Punch can help you process it as easy as a click.
+              You dont have to follow unnecessary steps to fill down an annual leave form or the time you waiting to receive the confirmation. With Punch, all of those things will be gone so you can have time to focus on what you do best.
             </div>
             <div class="card-footer">
               <a href="#">Learn more</a>
