--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -39,7 +39,7 @@ body.menu-opened {
       background-image: asset-url('ico_logo.png');
     }
 
-    .navbar-link { color: $black-color; }
+    .navbar-link { color: $color-darker; }
 
     .btn-signin {
       border: 1px solid $primary-color;
