--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,10 +3,10 @@
     <div class="navbar">
       <section class="navbar-section">
         <ul class="footer-utility">
-          <li><a href="http://1pac.vn">About</a></li>
-          <li><%= link_to "Contact us", contact_path, class: "navbar-link" %></li>
-          <li><%= link_to "Terms", terms_path, class: "navbar-link" %></li>
-          <li><%= link_to "Privacy", privacy_path, class: "navbar-link" %></li>
+          <li><a href="http://1pac.vn"><%= t('.about') %></a></li>
+          <li><%= link_to t('.contact_us'), contact_path, class: "navbar-link" %></li>
+          <li><%= link_to t('.terms'), terms_path, class: "navbar-link" %></li>
+          <li><%= link_to t('.privacy'), privacy_path, class: "navbar-link" %></li>
         </ul>
       </section>
       <section class="navbar-center">
