--- a/app/views/shared/_get_started_block.html.erb
+++ b/app/views/shared/_get_started_block.html.erb
@@ -1,6 +1,6 @@
 <div class="trial bg-linear-blue">
   <div class="trial-content">
-    <h2 class="trial-title">Free trial up to 30 days sign up now !</h2>
-    <%= link_to 'Get Started', get_started_url, class: 'btn btn-get-started navbar-link' %>
+    <h2 class="trial-title"><%= t('.title') %></h2>
+    <%= link_to t('.get_started'), get_started_url, class: 'btn btn-get-started navbar-link' %>
   </div>
 </div>
