--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -13,8 +13,8 @@
 <div class="main main-mt-0">
   <div class="contact bg-linear-blue">
     <div class="container contact-container">
-      <h1 class="text-center">Contact Us</h1>
-      <p class="text-center">Have a question, found a bug, or wish us did something more? Let us know! Also, be sure to check out our <%= link_to 'Features page.', features_path %></p>
+      <h1 class="text-center"><%= t('.title') %></h1>
+      <p class="text-center"><%= t('.instruction') %> <%= link_to t('.features_link'), features_path %></p>
 
       <div class="contact-form">
         <form class="form" action="https://docs.google.com/forms/d/e/1FAIpQLSfFe0wAmMMPM0W6BWbTMGHrj0FMRH4-CE8WHkC43COmwhgNYA/formResponse" target="_self" method="POST" id="mG61Hd">
@@ -24,22 +24,22 @@
           <input type="hidden" name="fbzx" value="-2168202203579643943">
 
           <div class="form-group">
-            <label class="form-label">Name</label>
+            <label class="form-label"><%= t('.label.name') %></label>
             <input type="text" class="form-input" autocomplete="off" name="entry.690197780" value="" required>
           </div>
 
           <div class="form-group">
-            <label class="form-label">Email</label>
+            <label class="form-label"><%= t('.label.email') %></label>
             <input type="email" class="form-input" autocomplete="off" name="entry.486098797" value="" required>
           </div>
 
           <div class="form-group">
-            <label class="form-label">Message</label>
+            <label class="form-label"><%= t('.label.message') %></label>
             <textarea class="form-input" name="entry.1118070560" required="" placeholder></textarea>
           </div>
 
           <div class="form-group">
-            <button type="submit" class="btn">Submit</button>
+            <button type="submit" class="btn"><%= t('.submit') %></button>
           </div>
         </form>
       </div>
