--- a/app/views/password_reset/edit.html.erb
+++ b/app/views/password_reset/edit.html.erb
@@ -23,11 +23,11 @@
       <%= form_with(model: @user, url: edit_password_reset_path(@user.reset_password_token), method: :post, local: true) do |f| %>
         <%= f.hidden_field :reset_password_token %>
         <div class="form-group <%= 'has-error' if @user.errors.messages[:password].present? %>">
-          <%= f.password_field :password, class: 'form-input', placeholder: t('password_reset.edit.password') %>
+          <%= f.password_field :password, class: 'form-input', placeholder: t('.password') %>
           <%= error_message(@user.errors, :password) %>
         </div>
         <div class="form-group <%= 'has-error' if @user.errors.messages[:password_confirmation].present? %>">
-          <%= f.password_field :password_confirmation, class: 'form-input', placeholder: t('password_reset.edit.password_confirmation') %>
+          <%= f.password_field :password_confirmation, class: 'form-input', placeholder: t('.password_confirmation') %>
           <%= error_message(@user.errors, :password_confirmation) %>
         </div>
         <div class="form-group">
