Prevent long title break layout

--- a/frontend/src/scss/_box.scss
+++ b/frontend/src/scss/_box.scss
@@ -23,6 +23,7 @@
     height: 5rem;
 
     .box-title {
+      word-break: break-word;
       cursor: pointer;
       margin-bottom: 0.2rem;
       line-height: 1;
