Fix namespace translation

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -19,7 +19,7 @@
           </span>
           <p class="text-bold"><%= t('.instruction') %></p>
           <div class="input-group">
-            <input type="text" placeholder="your-company-namespace" class="form-input namespace-input">
+            <input type="text" placeholder="<%= t('.namespace') %>" class="form-input namespace-input">
             <span>.punch.com</span>
             <button class="btn btn-primary btn-submit"><%= t('.go') %></button>
           </div>
