--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <% content_for(:js) do %>
-<%= render 'shared/chat_tawk_to' %>
+<%= render 'shared/crisp' %>
 <% end %>
 
 <div class="main main-mt-0">
@@ -240,6 +240,4 @@
     </div>
   </div>
   <% end %>
-
-  <%= render 'shared/get_started_block' %>
 </div>
