--- a/app/views/pages/features.html.erb
+++ b/app/views/pages/features.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <% content_for(:js) do %>
-<%= render 'shared/chat_tawk_to' %>
+<%= render 'shared/crisp' %>
 <% end %>
 
 <div class="main">
@@ -121,6 +121,4 @@
       </div>
     </div>
   </section>
-
-  <%= render 'shared/get_started_block' %>
 </div>
