--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <% content_for(:js) do %>
-<%= render 'shared/chat_tawk_to' %>
+<%= render 'shared/crisp' %>
 <% end %>
 
 <section class="section-mh bg-linear-blue">
