--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -31,7 +31,7 @@
         <li>
           <div>
             <h4>2. Website Covered</h4>
-            <p>This Privacy Policy applies to the Web sites that link to this Privacy Policy, including: <a href="https://www.punch.com">https://www.punch.com</a> and <a href="https://support.unch.com">https://support.punch.com</a>, Punch (collectively referred to as “1PAC Company Web sites” or “Product(s)”).</p>
+            <p>This Privacy Policy applies to the Web sites that link to this Privacy Policy, including: <a href="<%= root_path %>">https://www.punch.ooo</a></p>
           </div>
         </li>
         <li>
