--- a/app/views/password_reset_mailer/create.text.erb
+++ b/app/views/password_reset_mailer/create.text.erb
@@ -1,10 +1,10 @@
 Hi <%= @user.name %>,
 
-We heard that you lost your 1Punch password. Sorry about that!
+We heard that you lost your <%= ENV['APP_NAME'] %> password. Sorry about that!
 
 You can use the following link to reset your password:
 
 <%= url_for(subdomain: @company.namespace, action: 'edit', controller: 'password_reset', token: @token) %>
 
 Thanks,
-1Punch team
+<%= ENV['APP_NAME'] %> team
