Add link to app and fix feature title

--- a/app/views/pages/features.html.erb
+++ b/app/views/pages/features.html.erb
@@ -17,7 +17,7 @@
 <div class="main">
   <section class="description">
     <p class="text-center text-blue">Features</p>
-    <h2 class="section-title">Some fancy introdution<br>about features</h2>
+    <h2 class="section-title">Simplify your attendance management</h2>
     <div class="container">
       <div class="columns description-content col-reverse">
         <div class="column col-4 col-md-10 col-sm-12 col-mx-auto description-section">
