--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -149,10 +149,10 @@
       <h2 class="section-title">Available for Android & iOS</h2>
       <ul class="download-widget">
         <li class="download-widget-item">
-          <a href="#"><img data-src="<%= asset_url('img_widget_01.png') %>" alt="Download Punch on iOS" width="120"></a>
+          <a href="https://itunes.apple.com/us/app/punch-attendance-management/id1403667746?ls=1&mt=8"><img data-src="<%= asset_url('img_widget_01.png') %>" alt="Download Punch on iOS" width="120"></a>
         </li>
         <li class="download-widget-item">
-          <a href="#"><img data-src="<%= asset_url('img_widget_02.png') %>" alt="Download Punch on Android" width="132"></a>
+          <a href="https://play.google.com/store/apps/details?id=ooo.punch"><img data-src="<%= asset_url('img_widget_02.png') %>" alt="Download Punch on Android" width="132"></a>
         </li>
       </ul>
       <div class="columns">
@@ -162,16 +162,13 @@
             <div class="scroller-control">
               <div class="scroller-slider">
                 <div class="scroller-slider-item">
-                  <a href="#"><img data-src="<%= asset_url('img_device_01.png') %>" alt="Dowloand Punch on Ipad" width="288"></a>
+                  <a href="https://itunes.apple.com/us/app/punch-attendance-management/id1403667746?ls=1&mt=8"><img data-src="<%= asset_url('img_device_01.png') %>" alt="Dowloand Punch on Ipad" width="288"></a>
                 </div>
                 <div class="scroller-slider-item">
                   <a href="#"><img data-src="<%= asset_url('img_device_02.png') %>" alt="Download Punch on Iphone" width="160"></a>
                 </div>
                 <div class="scroller-slider-item">
-                  <a href="#"><img data-src="<%= asset_url('img_device_03.png') %>" alt="Download Punch on Android mobile" width="152"></a>
-                </div>
-                <div class="scroller-slider-item">
-                  <a href="#"><img data-src="<%= asset_url('img_device_04.png') %>" alt="Download Punch on Android tablet" width="400"></a>
+                  <a href="https://play.google.com/store/apps/details?id=ooo.punch"><img data-src="<%= asset_url('img_device_03.png') %>" alt="Download Punch on Android mobile" width="152"></a>
                 </div>
               </div>
             </div>
