--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -162,13 +162,13 @@
             <div class="scroller-control">
               <div class="scroller-slider">
                 <div class="scroller-slider-item">
-                  <a href="https://itunes.apple.com/us/app/punch-attendance-management/id1403667746?ls=1&mt=8"><img data-src="<%= asset_url('img_device_01.png') %>" alt="Dowloand Punch on Ipad" width="288"></a>
+                  <a href="https://itunes.apple.com/us/app/punch-attendance-management/id1403667746?ls=1&mt=8"><img data-src="<%= asset_url('img_device_01.png') %>" alt="Dowloand Punch on Ipad" width="308"></a>
                 </div>
                 <div class="scroller-slider-item">
-                  <a href="#"><img data-src="<%= asset_url('img_device_02.png') %>" alt="Download Punch on Iphone" width="160"></a>
+                  <a href="https://itunes.apple.com/us/app/punch-ooo/id1405466790?ls=1&mt=8"><img data-src="<%= asset_url('img_device_02.png') %>" alt="Download Punch on Iphone" width="180"></a>
                 </div>
                 <div class="scroller-slider-item">
-                  <a href="https://play.google.com/store/apps/details?id=ooo.punch"><img data-src="<%= asset_url('img_device_03.png') %>" alt="Download Punch on Android mobile" width="152"></a>
+                  <a href="https://play.google.com/store/apps/details?id=ooo.punch"><img data-src="<%= asset_url('img_device_03.png') %>" alt="Download Punch on Android mobile" width="172"></a>
                 </div>
               </div>
             </div>
