--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -17,6 +17,7 @@
 <div class="main main-mt-0">
   <div class="contact bg-linear-blue">
     <div class="container contact-container">
+      <h1>Hello World!! Hello Server!!!</h1>
       <h1 class="text-center"><%= t('.title') %></h1>
       <p class="text-center"><%= t('.instruction') %> <%= link_to t('.features_link'), features_path %></p>
 
