add punch video on landing page

--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -8,6 +8,8 @@ $screen-xs-mobile: 375px !default;
 // Color
 $primary-color: #439aff;
 $primary-color-dark: #234fff;
+$color-blue-ribbon: #005cff;
+$color-true-blue: #001aff;
 $black-color: #000;
 $black-color-truly: #363636;
 $red-color: #fc4e5c;
