--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -54,3 +54,34 @@
     border-radius: .2rem;
   }
 }
+
+.btn-link {
+  cursor: pointer;
+  outline: 0;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
+}
+
+#btn-open-modal {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+
+  svg {
+    color: $color-blue-ribbon;
+  }
+
+  &:hover {
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+
+    svg {
+      color: $color-true-blue;
+    }
+  }
+}
